pc-personal/Fedora_32/iptables
# Generated by iptables-save v1.8.4 on Fri Aug 21 15:26:58 2020
*mangle
:PREROUTING ACCEPT [23807:23608264]
:INPUT ACCEPT [23642:23599268]
:FORWARD ACCEPT [63:4788]
:OUTPUT ACCEPT [13453:2136443]
:POSTROUTING ACCEPT [13515:2141155]
COMMIT
# Completed on Fri Aug 21 15:26:58 2020
# Generated by iptables-save v1.8.4 on Fri Aug 21 15:26:58 2020
*nat
:PREROUTING ACCEPT [17:2917]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [26:2331]
:POSTROUTING ACCEPT [25:2255]
COMMIT
# Completed on Fri Aug 21 15:26:58 2020
# Generated by iptables-save v1.8.4 on Fri Aug 21 15:26:58 2020
*filter
:INPUT DROP [6:1312]
:FORWARD DROP [0:0]
:OUTPUT DROP [1:76]
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m tcp --sport 53 -j ACCEPT
-A INPUT -p udp -m udp --sport 53 -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 6222 -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 53 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A OUTPUT -p tcp -m multiport --dports 80,443 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 587 -j ACCEPT
COMMIT
# Completed on Fri Aug 21 15:26:58 2020
